# spectral-domain-implementation-of-wave-interaction-theory

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  TODO.md  analytic2D.m  benchmark_direct_vs_spectral_20260225_164323.csv  benchmark_direct_vs_spectral_20260225_164323.mat  benchmark_mf12_direct_vs_spectral.m  benchmark_mf12_speed_memory.m  check_correctness.m  check_speed.m  compare_crossing_sea_methods.m  compare_eta33_vwa_ow3d.m  compare_eta33_vwa_ow3d_stream.m  compute_kxky.m  generate_crossing_sea.m  my2nd_directional_generator.m  outputfiles  plot_eta_wavegroup_lines.m  plot_mf12_theoretical_complexity_memory.m  plot_mf12_theoretical_three_methods.m  plot_phi3_direct_vs_spectral.m  plot_phi3_wavegroup_lines.m  test_superharmonic_fix.m  tmp_diag_discretization.m  tmp_locate_phi_issue.m
c/: README.md
cpp/: CMakeLists.txt  README.md
cpp/include/mf12_cpp/: case_io.hpp  compare.hpp  result_io.hpp  spectral.hpp
cpp/src/: case_io.cpp  compare.cpp  main.cpp  result_io.cpp  spectral.cpp
cross_language_comparison/: README.md  run_speed_sweep.py
cross_language_comparison/cases/: index.json
docs/: API_OVERVIEW.md  README.md
examples/: run_direct_minimal.m  run_spectral_minimal.m
irregularWavesMF12/: ReadMe.m
irregularWavesMF12/Examples/: example_FocusedWave.m  example_IrregularWaves.m  example_KinematicsForces.m  example_MovingFrame.m  example_ShortCrestedWaves.m  example_StandingWave.m  example_StokesWave.m  example_ThreeWaves.m  example_WaveGroup.m
irregularWavesMF12/Source/: coeffsMF12.m  coeffsMF12_superharmonic.m  surfaceMF12.m  surfaceMF12_integrated_opt.m  surfaceMF12_new.m  surfaceMF12_new_fixphi.m  surfaceMF12_opt.m  surfaceMF12_spectral.m  surfaceMF12_spectral_baseline.m  surfaceMF12_streaming_super.m
matlab/: README.md  setup_paths.m
matlab/examples/: run_direct_minimal.m  run_spectral_minimal.m
matlab/repro/: benchmark_case_from_manifest.m  export_component_lines_wavegroup_regression.m  export_cross_language_cases.m  reproduce_manuscript_minimal.m
matlab/tests/: regression_wavegroup_phi3.m  smoke_test_minimal.m
matlab/verification/: benchmark_direct_vs_spectral_vsN.m  benchmark_mf12_speed_memory.m  compare_crossing_sea_methods.m  plot_eta_wavegroup_lines.m  plot_kinematics_direct_vs_spectral.m  plot_phi3_direct_vs_spectral.m  plot_phi3_wavegroup_lines.m  plot_phi3_wavegroup_surface_sections.m  (+1 more)
python/: README.md  pyproject.toml
python/scripts/: compare_python_cpp_matlab.py  plot_component_lines_python_cpp_matlab.py  plot_component_lines_python_vs_matlab.py  plot_python_vs_matlab.py  plot_third_order_python_cpp_matlab.py  run_benchmarks.py
python/src/mf12_python/: __init__.py  cli.py  compare.py  io.py  spectral.py
python/tests/: test_compare.py  test_io.py
repro/: reproduce_manuscript_minimal.m
tests/: regression_wavegroup_phi3.m  smoke_test_minimal.m
verification/: benchmark_direct_vs_spectral_vsN.m  benchmark_mf12_direct_vs_spectral.m  benchmark_mf12_speed_memory.m  benchmark_streaming_super_scalar_fastpath.m  benchmark_surface_spectral_before_after.m  compare_crossing_sea_methods.m  plot_eta_wavegroup_lines.m  plot_mf12_theoretical_complexity_memory.m  plot_mf12_theoretical_three_methods.m  plot_phi3_direct_vs_spectral.m  plot_phi3_wavegroup_lines.m  plot_phi3_wavegroup_surface_sections.m  test_new_spectral_realistic_sea_highN.m
(+97 files in other folders)
